<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_details">Movie details</string>
    <!-- -->
    <string name="movie_poster">movie poster thumbnail</string>
    <string name="txt_movie_title">Title</string>
    <string name="txt_vote_average">Vote average:</string>
    <string name="txt_release_date">Release date:</string>
    <string name="txt_movie_overview">Description</string>
    <string name="date">date</string>
    <string name="number">number</string>
    <!-- -->
    <string name="no_connection_message">No internet connection</string>
    <string name="nothing_found_message">Either nothing found or check internet connection</string>
    <!-- -->
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Popular movies settings</string>
    <!-- -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key">order_by</string>
    <string name="settings_order_by_default">@string/settings_order_by_popularity_value</string>
    <!-- -->
    <string name="settings_order_by_popularity_label">Most popular</string>
    <string name="settings_order_by_popularity_value">popular</string>
    <string name="settings_order_by_rating_label">Top rated</string>
    <string name="settings_order_by_rating_value">top_rated</string>
</resources>
